--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,32 +1,34 @@
-<router-outlet>
-    <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #e3f2fd;">
-        <a class="navbar-brand font-weight-bold" routerLink="/">ProJuris</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
+<nav class="navbar navbar-expand-lg navbar-light" style="background-color: #e3f2fd;">
+    <a class="navbar-brand font-weight-bold" [routerLink]="['/']">ProJuris</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
 
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item">
-                    <a class="nav-link" routerLink="/pokemon" routerLinkActive="active">Pokémons</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link " routerLink="/about" routerLinkActive="active">About</a>
-                </li>
-            </ul>
-            <ul class="navbar-nav flex-row ml-md-auto d-none d-md-flex">
-                <li class="nav-item">
-                    <a class="nav-link p-2" href="https://www.linkedin.com/company/projuris/" target="_blank"><i
-                            class="fa fa-linkedin-square">
-                        </i></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link p-2" href="https://www.facebook.com/ProJurisOficial/" target="_blank"><i
-                            class="fa fa-facebook-square">
-                        </i></a>
-                </li>
-            </ul>
-        </div>
-    </nav>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+            <li class="nav-item">
+                <a class="nav-link" [routerLink]="['/pokemon']" routerLinkActive="active">Pokémons</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link " [routerLink]="['/about']" routerLinkActive="active">About</a>
+            </li>
+        </ul>
+        <ul class="navbar-nav flex-row ml-md-auto d-none d-md-flex">
+            <li class="nav-item">
+                <a class="nav-link p-2" href="https://www.linkedin.com/company/projuris/" target="_blank"><i
+                        class="fa fa-linkedin-square">
+                    </i></a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link p-2" href="https://www.facebook.com/ProJurisOficial/" target="_blank"><i
+                        class="fa fa-facebook-square">
+                    </i></a>
+            </li>
+        </ul>
+    </div>
+</nav>
+
+<router-outlet>
+
 </router-outlet>
